fix spacing

--- a/modules/issue_tracker/css/issue_tracker.css
+++ b/modules/issue_tracker/css/issue_tracker.css
@@ -81,9 +81,15 @@ h3 {
 
 .history-item-changes {
   margin-left: 2em;
+  margin-top: 1em;
 }
 
 .history-item-user {
   font-weight: bold;
   margin: 0 4px;
+}
+
+.history-comment {
+  margin-top: 1em;
+  margin-left: 4em;
 }
